--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "ngrok": "^5.0.0-beta.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
