--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroui/button": "2.2.19",
     "@heroui/code": "2.2.14",
     "@heroui/input": "2.4.19",
@@ -21,7 +23,11 @@
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/styles": "^6.4.8",
     "@react-aria/visually-hidden": "3.8.22",
+    "classnames": "^2.5.1",
     "clsx": "2.1.1",
     "cookie": "^1.0.2",
     "framer-motion": "11.13.1",
